--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LoveLink</title>
+    <title>🩵LoveLink</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,400;1,300&display=swap"
       rel="stylesheet"
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
       rel="stylesheet"
     />
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
